Fixed overflowing back and forward buttons

--- a/main.css
+++ b/main.css
@@ -506,6 +506,8 @@ nav > ul > .active > a:focus {
 
 .postnav {
 	padding-top: 20px;
+    padding-bottom: 20px;
+	overflow: auto;
 }
 
 .postnav > a {
